# scope

./: CMakeLists.txt  main.cpp
asset/42_resources/: teapot2.mtl
asset/UwU/: UwU.mtl
asset/cube/: cube.mtl
asset/viking/: viking_room.mtl
class/: MaterialLoader.cpp  Obj.cpp  VulkanApplication.cpp
include/: MaterialLoader.hpp  Obj.hpp  VulkanApplication.hpp
shader/: frag.spv  shader_test.frag
template/: Matrix.tpp  Vector.tpp
